# distributed_systems

./: .gitignore  data_structures.rs  network_communication.rs  raft_implementation.rs  raft_node.rs
cloud_p2p_raft/: Cargo.toml  TEST_MALAK_NOFIREWALL.sh  local_nodes.ps1  metrics-node-1.csv  run_node.sh  test.ps1  test_distributed.sh  test_full_setup.sh  test_image_pipeline.sh
cloud_p2p_raft/docs/: dynamic_join.md
cloud_p2p_raft/src/: crypto.rs  data_structures.rs  lib.rs  main.rs  storage.rs
cloud_p2p_raft/src/utils/: stego.rs
cloud_p2p_raft/stego_test/: Cargo.toml
cloud_p2p_raft/stego_test/src/: main.rs  stego.rs
cloud_p2p_raft/tests/: photo_message_tests.rs
cloud_p2p_raft/uploads/: img-1762018182633952400-Screenshot-2025-10-21-140344-png
