[package]
name = "cloud_p2p_raft"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.21.3"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.4"
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
futures = "0.3"
axum = "0.7"
hyper = "1"
tower = "0.5"
thiserror = "1"
base64 = "0.21"


[[bin]]
name = "proxy"
path = "src/bin/proxy.rs"
