[package]
name = "cloud_p2p_raft"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- existing deps you already had ---
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.21.3"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.4"
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
futures = "0.3"
hyper = "1"
tower = "0.5"
thiserror = "1"

# --- GUI additions (safe to add; won’t break existing behavior) ---
# Enable multipart extraction for file uploads.
axum = { version = "0.7", features = ["multipart"] }
# Static file serving for /files/uploads and /files/stego.
tower-http = { version = "0.5", features = ["fs"] }

# Image processing (PNG/JPEG/BMP) for stego I/O.
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "bmp"] }

# Crypto for encrypting the uploaded bytes before embedding.
chacha20poly1305 = { version = "0.10", features = ["std"] }
sha2 = "0.10"
rand_core = "0.6"
hex = "0.4"

[[bin]]
name = "gui"
path = "src/bin/gui.rs"

[[bin]]
name = "proxy"
path = "src/bin/proxy.rs"
